{
  "version": 4,
  "terraform_version": "1.5.1",
  "serial": 44,
  "lineage": "43631ab7-56a0-c4f0-5e01-65c46420d60e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "terra-elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:267221451860:loadbalancer/terra-elb",
            "availability_zones": [
              "us-west-2a",
              "us-west-2b"
            ],
            "connection_draining": true,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "desync_mitigation_mode": "defensive",
            "dns_name": "terra-elb-317538170.us-west-2.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:80/index.html",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "terra-elb",
            "idle_timeout": 100,
            "instances": [
              "i-0de7abd1f56470358",
              "i-0fa5a96a65b263439"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "terra-elb",
            "security_groups": [
              "sg-046af0c811978dae0"
            ],
            "source_security_group": "267221451860/allow-http",
            "source_security_group_id": "sg-046af0c811978dae0",
            "subnets": [
              "subnet-0d29ba4aa4e375840",
              "subnet-0f17e06254f355724"
            ],
            "tags": {
              "Name": "terraform-elb"
            },
            "tags_all": {
              "Name": "terraform-elb"
            },
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "aws_instance.webservers",
            "aws_security_group.webservers",
            "aws_subnet.public",
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webservers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0529ae4622e1288aa",
            "arn": "arn:aws:ec2:us-west-2:267221451860:instance/i-0de7abd1f56470358",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0de7abd1f56470358",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0fc532aeea3cc9ce2",
            "private_dns": "ip-10-20-1-117.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.20.1.117",
            "public_ip": "52.40.69.253",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-062b5d4e35c6e0dae",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-046af0c811978dae0"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d29ba4aa4e375840",
            "tags": {
              "Name": "server-0"
            },
            "tags_all": {
              "Name": "server-0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-046af0c811978dae0"
            ]
          },
          "dependencies": [
            "aws_security_group.webservers",
            "aws_subnet.public",
            "aws_vpc.terra_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0529ae4622e1288aa",
            "arn": "arn:aws:ec2:us-west-2:267221451860:instance/i-0fa5a96a65b263439",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fa5a96a65b263439",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-091b3c32f99a29fb6",
            "private_dns": "ip-10-20-2-185.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.20.2.185",
            "public_ip": "34.222.89.147",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0b888ba5a8fc989ed",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-046af0c811978dae0"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f17e06254f355724",
            "tags": {
              "Name": "server-1"
            },
            "tags_all": {
              "Name": "server-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-046af0c811978dae0"
            ]
          },
          "dependencies": [
            "aws_security_group.webservers",
            "aws_subnet.public",
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "terra_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:267221451860:internet-gateway/igw-0c83f4bd2890cd0f3",
            "id": "igw-0c83f4bd2890cd0f3",
            "owner_id": "267221451860",
            "tags": {
              "Name": "manin"
            },
            "tags_all": {
              "Name": "manin"
            },
            "vpc_id": "vpc-05a3f17bca7f3e927"
          },
          "dependencies": [
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:267221451860:route-table/rtb-0fcf469351b4f7342",
            "id": "rtb-0fcf469351b4f7342",
            "owner_id": "267221451860",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c83f4bd2890cd0f3",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "publicRouteTable"
            },
            "tags_all": {
              "Name": "publicRouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-05a3f17bca7f3e927"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.terra_igw",
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d8ff7355e23e86b9",
            "route_table_id": "rtb-0fcf469351b4f7342",
            "subnet_id": "subnet-0d29ba4aa4e375840"
          },
          "dependencies": [
            "aws_internet_gateway.terra_igw",
            "aws_route_table.public_rt",
            "aws_subnet.public",
            "aws_vpc.terra_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f002b004c3fa3538",
            "route_table_id": "rtb-0fcf469351b4f7342",
            "subnet_id": "subnet-0f17e06254f355724"
          },
          "dependencies": [
            "aws_internet_gateway.terra_igw",
            "aws_route_table.public_rt",
            "aws_subnet.public",
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webservers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:267221451860:security-group/sg-046af0c811978dae0",
            "description": "allow http inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-046af0c811978dae0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow-http",
            "name_prefix": "",
            "owner_id": "267221451860",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05a3f17bca7f3e927"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:267221451860:subnet/subnet-0d29ba4aa4e375840",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.20.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d29ba4aa4e375840",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "267221451860",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-1"
            },
            "tags_all": {
              "Name": "subnet-1"
            },
            "vpc_id": "vpc-05a3f17bca7f3e927"
          },
          "dependencies": [
            "aws_vpc.terra_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:267221451860:subnet/subnet-0f17e06254f355724",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.20.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f17e06254f355724",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "267221451860",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-2"
            },
            "tags_all": {
              "Name": "subnet-2"
            },
            "vpc_id": "vpc-05a3f17bca7f3e927"
          },
          "dependencies": [
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terra_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:267221451860:vpc/vpc-05a3f17bca7f3e927",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-08a23338c478b8d9f",
            "default_route_table_id": "rtb-0102db6e6566bea92",
            "default_security_group_id": "sg-0cdf6aaf2649c79de",
            "dhcp_options_id": "dopt-0d2cbbd5539a34df4",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05a3f17bca7f3e927",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0102db6e6566bea92",
            "owner_id": "267221451860",
            "tags": {
              "Name": "TerraVPC"
            },
            "tags_all": {
              "Name": "TerraVPC"
            }
          }
        }
      ]
    }
  ]
}